Fix Spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ body{
     background-color: #f5f5f5;
 }
 
-div.question{
-  padding-top: 20px;
+.question{
+  margin-top: 20px;
 }
 
 span.question-answer{
